Update Calendly link and GitHub profile link

--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@ footer a{color:var(--highlight);margin:0 15px}
       <p style="margin-top:30px;">I'm available for freelance projects, consultations, repairs, and collaboration. Book a free 30-minute discovery call below or reach out directly.</p>
     </div>
     <div class="calendly-wrapper">
-      <div class="calendly-inline-widget" data-url="https://calendly.com/your-calendly-username/30min" style="min-width:320px;height:700px;"></div>
+      <div class="calendly-inline-widget" data-url="https://calendly.com/wanjerumarc/30min" style="min-width:320px;height:700px;"></div>
     </div>
   </div>
 </section>
@@ -611,7 +611,7 @@ footer a{color:var(--highlight);margin:0 15px}
   <p>Location: 🇺🇬 Kampala, Uganda</p>
   <p>
     <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</a> • 
-    <a href="https://github.com/your-username" target="_blank">GitHub</a>
+    <a href="https://github.com/Wanjerumarcc" target="_blank">GitHub</a>
   </p>
 </footer>
 
